# tokra-shield

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  PATENT_NOTICE.md  PATENT_PLEDGE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyproject.toml.bak
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  test.yml
.venv_smoke/: pyvenv.cfg
docs/: TOKRA_SHIELD_GUIDE.txt  index.md  usage.md
docs/legal/: patents.md
examples/: quickstart.py
examples/overrides/ghost/: en.json
legal/: PATENT_NOTICE.md  PATENT_PLEDGE.md
release/tokra-shield-0.1.0-rc/: install-tokra.bat  install-tokra.ps1  install_tokra.sh
release/tokra-shield-0.1.0-rc/docs/: QUICKSTART.txt
release/tokra-shield-0.1.0-rc/scripts/: restart_api.sh  self_check.sh  start_api.sh  stop_api.sh
release/tokra-shield-0.1.0-rc/tools/: TokraShield.postman_collection.json
run/: .env.example  env.sh
scripts/: make_release.sh  post.json  status_api.sh  uninstall.sh  wrk_post.lua
tests/: test_api.py  test_detector.py  test_zero_width_and_modes.py
tokra_shield/: __init__.py  __main__.py  config.py  engine.py
tokra_shield/ghost/: __init__.py
tools/: TokraShield.postman_collection.json
