[project]
name = "tokra-shield"
version = "0.1.0"
description = "Lightweight, dependency‑free content‑protection SDK"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Tokra Community" }]
keywords = ["content-safety", "spam", "scam", "prompt-injection"]

[project.scripts]
tokra-shield = "tokra_shield.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tokra_shield*"]

[tool.setuptools.package-data]
tokra_shield = ["ghost/*.json"]
